--- a/0anP4iT3/WebFolder/index.waPage/index.html
+++ b/0anP4iT3/WebFolder/index.waPage/index.html
@@ -9,5 +9,6 @@
 		<meta name="WAF.catalog" content="" />
 	</head>
 	<body id="waf-body" data-type="document" data-lib="WAF" data-rpc-activate="false" data-rpc-namespace="rpc" data-rpc-validation="false" style="">
+		<p style="color:red">New page</p>
 	</body>
 </html>
