--- a/0anP4iT3/WebFolder/index.waPage/index.html
+++ b/0anP4iT3/WebFolder/index.waPage/index.html
@@ -16,6 +16,7 @@
 		<p style="color:red">New page</p>
 		<button id="button1" data-type="button" data-lib="WAF" class="waf-widget waf-button " data-action="simple" data-target="_blank" data-constraint-left="true" data-constraint-top="true" data-text="Just click"></button>
 		<p>Im here too doing some things around.</p>
+		<p>Just that</p>
 		<script type="text/javascript" src="/waLib/WAF/Loader.js"></script>
 	</body>
 </html>
